--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,12 @@ default: &default
 
 development:
   <<: *default
-  database: ruby-getting-started_development
+  database: getting_started_development
+  username: vagrant
+  password: <%= ENV['DATABASE_USER_PWD_PG'] %>
+
+
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,8 +62,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ruby-getting-started_test
-
+  database: getting_started_test
+  username: vagrant
+  password: <%= ENV['DATABASE_USER_PWD_PG'] %>
+  
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -80,6 +87,6 @@ test:
 #
 production:
   <<: *default
-  database: ruby-getting-started_production
-  username: ruby-getting-started
-  password: <%= ENV['RUBY-GETTING-STARTED_DATABASE_PASSWORD'] %>
+  database: getting_started_production
+  username: vagrant
+  password: <%= ENV['DATABASE_USER_PWD_PG'] %>
